[tool.poetry]
name = "Silk"
version = "0.1.0"
description = ""
authors = ["AYUSH"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
image = "^1.5.33"
pyfiglet = "^0.8.post1"
replit = "^3.1.0"
discord = "^1.7.3"
config = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
